--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "# Readme\n",
-    "<br> 本代码为HuffMan编码解码的演示，属于信息论作业<br>\n",
-    "<br> 姓名：李海洋 学号：20151213615 <br>\n",
+    "<br> 本代码为HuffMan编码解码的演示<br>\n",
     "<br> 目录 <br>\n",
     "<br> 1.字符数据处理<br>\n",
     "<br> 2.HuffMan树构造<br>\n",
